Fixed combination select alignment.

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -191,6 +191,11 @@ div.tooltip {
   display: flex;
 }
 
+.search__label {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar__icon {
   display: flex;
 }
